--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 		}
 	},
 	"require-dev": {
-		"behat/behat": "~2.5"
+		"behat/behat": "~2.5",
+		"phpunit/phpunit": "^9"
 	},
 	"config": {
 		"bin-dir": "bin/"
